# telegramBotEmbed

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  README_zh-CN.md  config.example.py  config.example.toml  config.py  install.sh  main.py  requirements.txt  telegramBotEmbed.py  telembed.service  update.sh
.github/: build.yml
.github/workflows/: build-release.yml  build.yml
data/: QA.json
docs/: QA.json
src/: main.rs
src/bot/: callbacks.rs  commands.rs  message.rs  mod.rs  state.rs  types.rs  ui.rs  utils.rs
src/config/: mod.rs  types.rs
src/gemini/: key_manager.rs
src/qa/: embedding.rs  management.rs  mod.rs  persistence.rs  search.rs  service.rs  types.rs  utils.rs
telegram_bot_rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.example.toml
telegram_bot_rust/docs/: QA.json
telegram_bot_rust/src/: main.rs  qa.rs
