[package]
name = "telembed"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
sha2 = "0.10.9"

teloxide = { version = "0.15.0", features = ["macros", "rustls"] }
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"

chrono = { version = "0.4.41", features = ["serde"] }
rig-core = "0.13.0"
simple_logger = "5.0.0"
toml = "0.8.23"
dirs = "6.0.0"
